# SEPScraper

./: .gitignore  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: scrape.yaml
